# fleet_adapter_invisibot

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: build_minimal.yml
fleet_adapter_invisibot/: config.yaml  nav_graph.yaml  package.xml  setup.cfg  setup.py
fleet_adapter_invisibot/configs/: .gitignore
fleet_adapter_invisibot/configs/default/: config.yaml
fleet_adapter_invisibot/fleet_adapter_invisibot/: RobotClientAPI.py  dispenser_adapter.py  fleet_adapter.py  ingestor_adapter.py
fleet_adapter_invisibot/launch/: fleet_adapter.launch.xml  run.launch.xml
fleet_adapter_invisibot/test/: test_copyright.py  test_flake8.py
scripts/: 1_build_docker_image.bash  2_build_docker_container.bash  2_run_docker_container.bash  3_deploy_docker_container.bash  4_push_docker_image.bash
