<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_adapter_invisibot</name>
  <version>0.0.0</version>
  <description>A RMF fleet adapter for invisibot, a virtual robot</description>
  <maintainer email="beyhy94@gmail.com">Gary Bey</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
